--- a/前端.md
+++ b/前端.md
@@ -30,6 +30,44 @@
 
 
 
+## url 里的符号
+
+<font color='red'>#</font>，井号：表示网页中的一个位置，被称之为锚点，常用于<font color='red'>某个网页间不同位置的跳转</font>，简单的说就是在一个网页中，<font color='red'>URL 不变的情况下</font>，通过添加“#buy”的字符在 URL 最后可以跳转到当前网页中已经定义好的锚点（id="buy"）位置；同样#的改变也<font color='red'>会增加浏览器的历史记录</font>，也就是说我们可以通过“后退”按钮回到上一个位置，而熟悉网页开发的朋友们可能也会用于 ajax 的一些操作中，以此来实现不同的访问状态和改变页面访问内容，从而也可以实现那种无刷新载入的效果。
+
+
+
+<font color='dddgreen'>?</font>，问号：常用于动态网站，实现<font color='dddgreen'>不同的参数值而生成不同的页面或者返回不同的结果</font>，例如 WordPress 的动态链接就是/?p=ID，其中的 p 就表示 post 文章，ID 就表示文章的 ID，从而可以通过文章的 ID 来访问不同的文章。当然我们还常用的就是通过问号+任意参数来<font color='dddgreen'>实现页面的刷新</font>，从而<font color='dddgreen'>获得最新的页面或者缓存的刷新</font>。
+
+有无问号的两个url打开的页面一样。但是有问号，说明不调用缓存的内容，而<font color='dddgreen'>认为是一个新地址，重新读取</font>。在做http请求的时候，如果浏览器检测到你的地址完全没变，会从缓存里读取先前请求过的数据，不再发送请求。有些时候是页面资源的加载，加上?，会让浏览器认为这是一个新的地址，从而<font color='dddgreen'>保证重新获取资源</font>。
+
+例如：https://i.leiue.com/avatar/?size=100 （访问该链接就可以获得泪雪用户中心默认的用户头像，并且其 size 就是图像像素大小，所以就会是一个 100px 的头像显示）
+
+
+
+<font color='orange'>&</font>，连接符：连接作用，也可以说是<font color='orange'>不同参数的间隔符</font>，一般与问号结合使用，一个动态 URL 链接中以问号开始第一个参数，同&连接符来串联多个参数和值。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -476,11 +514,9 @@
 
 作用域：引用了该外部样式文件的页面。
 
-
-
 写法：<img src="https://cdn.jsdelivr.net/gh/Yyyyx0731/blog@img/img/202307250039127.png" alt="image-20230720174205625" style="zoom:50%;" />
 
-
+#### link标签
 
 例：	<img src="https://cdn.jsdelivr.net/gh/Yyyyx0731/blog@img/img/202307250039521.png" alt="image-20230720172927669" style="zoom:60%;" />
 
@@ -959,9 +995,9 @@ do-while
 
 <img src="https://cdn.jsdelivr.net/gh/Yyyyx0731/blog@img/img/202307250107560.png" alt="image-20230724165335963" style="zoom:50%;" />
 
+​		 		<img src="https://cdn.jsdelivr.net/gh/Yyyyx0731/blog@img/img/202307252349916.png" alt="image-20230725234920835" style="zoom:50%;" />
 
-
-
+​				  <img src="https://cdn.jsdelivr.net/gh/Yyyyx0731/blog@img/img/202307252353687.png" alt="image-20230725235035146" style="zoom:50%;" />						
 
 
 
